<resources>
    <string name="app_name">Create New Note</string>
    <string name="ettitle">Title</string>
    <string name="etdesc">Description</string>
    <string name="remind">Remind me at:</string>
    <string name="type">Type: </string>
    <string name="tags">Tags: </string>
    <string name="weeks">"Weeks: "</string>
    <string name="btntune">Tune</string>
    <string name="select_audio_file_title">Select audio file</string>
    <string name="save">Save</string>
</resources>