<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:padding="20dp"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <EditText
            android:id="@+id/ettitle"
            android:background="@drawable/custom_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textSize="20dp"
            android:hint="@string/ettitle"/>
        <EditText
            android:id="@+id/etdesc"
            android:background="@drawable/custom_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="3"
            android:maxLines="5"
            android:padding="10dp"
            android:layout_marginTop="10dp"
            android:textSize="20dp"
            android:hint="@string/etdesc"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/remind"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:textColor="@color/black"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/sethours"
                android:layout_width="0dp"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="00:00"
                android:textColor="@color/black"
                android:textSize="30dp"/>
            <TextView
                android:id="@+id/setdate"
                android:layout_width="0dp"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="21/04/2021"
                android:textColor="@color/black"
                android:textSize="30dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tvType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/type"
                android:textColor="@color/black"/>
            <Space
                android:layout_width="10dp"
                android:layout_height="wrap_content"
                android:layout_weight="0" />

            <Spinner
                android:id="@+id/spinnerType"
                android:paddingRight="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tvTags"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tags"
                android:textColor="@color/black"/>
            <Space
                android:layout_width="10dp"
                android:layout_height="wrap_content"
                android:layout_weight="0" />

            <TextView
                android:id="@+id/tvShowTags"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"/>
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tvWeeks"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/weeks"
                android:textColor="@color/black"/>
            <Space
                android:layout_width="10dp"
                android:layout_height="wrap_content"
                android:layout_weight="0" />

            <TextView
                android:id="@+id/tvShowDay"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"/>
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/btnTune"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btntune"
                android:background="@drawable/custom_title"/>
            <Spinner
                android:id="@+id/spnTune"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <TextView
            android:id="@+id/tvTune"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColor="@color/black"/>

    </LinearLayout>

</layout>